@@ -166,6 +166,12 @@ WORKFLOW_CHAIN_DICT = None\n
 # Once this document changes this script should be immediately \n
 # updated to include or fix any security change.\n
 \n
+# Workflows whose security should be updated.\n
+# To upgrade entire security use context.portal_workflow.objectIds()\n
+# or [] to update None.\n
+\n
+UPDATE_SECURITY_WORKFLOW_ID_LIST = []\n
+\n
 # Portal Types to be updated using updateMappingDefinition.\n
 # To upgrade entire security use context.portal_types.objectIds()\n
 # or [] to update None.\n
@@ -350,6 +356,8 @@ signature_dict = {\n
  , \'finalize_upgrade_script_list\': FINALIZE_ALARM_SCRIPT\n
    # Provides a dict with expected catalog filter expressions\n
  , \'catalog_filter_dict\': CATALOG_FILTER_DICT\n
+   # Provides a list of workflow ids whose security should be updated.\n
+ , \'update_security_workflow_id_list\': UPDATE_SECURITY_WORKFLOW_ID_LIST\n
    # Provides a list of portal types to had rules updated.\n
  , \'update_role_portal_type_list\': UPDATE_ROLE_PORTAL_TYPE_LIST\n
    # Provide a list of Property Sheet Expected into a portal type list\n
