@@ -67,8 +67,19 @@ if not upgrade:\n
   return message_list\n
 \n
 portal = context.getPortalObject()\n
+portal_workflow = portal.portal_workflow\n
+workflow_id_list = portal.ERP5Site_getUpgraderSignature(\'update_security_workflow_id_list\', [])\n
+for workflow_id in workflow_id_list:\n
+  workflow = getattr(portal_workflow, workflow_id, None)\n
+  if workflow is not None:\n
+    workflow.updateRoleMappings()\n
+\n
+message_list.append(\n
+            "Update workflow security for: \\n\\t%s" % \\\n
+            (\'\\n\\t\'.join(workflow_id_list)))\n
+\n
 types_tool = portal.portal_types\n
-portal_type_list = portal.ERP5Site_getUpgraderSignature("update_role_portal_type_list")\n
+portal_type_list = portal.ERP5Site_getUpgraderSignature(\'update_role_portal_type_list\', [])\n
 \n
 for pt in portal_type_list:\n
   portal_type_document = types_tool.getTypeInfo(pt)\n
